deploy/base/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clipsearch-api
  namespace: clipsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clipsearch-api
  template:
    metadata:
      labels:
        app: clipsearch-api
    spec:
      containers:
        - name: clipsearch-api
          image: ghcr.io/dawidbera/clipsearch-api:a5dffa2519a9fb7b384b791f8bc18f0aa1e60c69
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "384Mi"
              cpu: "250m"
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: clipsearch-api
  namespace: clipsearch
spec:
  selector:
    app: clipsearch-api
  ports:
    - port: 8080
      targetPort: 8080
