deploy/base/localstack-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: localstack
  namespace: dawidbera-dev
spec:
  to:
    kind: Service
    name: localstack
    weight: 100
  port:
    targetPort: 4566
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
